# gamepad-wireless-cursor

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  README.md
components/Algorithm/: CMakeLists.txt  button_debounce.c  mpu_motion.c  stick_processing.c  trigger_input.c
components/Bsp/: CMakeLists.txt
configurator/: index.html  package-lock.json  package.json  todo.md  tsconfig.json  vite.config.ts
configurator/src/: App.tsx  index.css  styles.css  types.ts
configurator/src-tauri/: Cargo.toml  tauri.conf.json
configurator/src-tauri/.cargo/: config.toml  run-with-opencv.ps1
configurator/src-tauri/capabilities/: default.json
configurator/src-tauri/src/: ai_screen_pull.rs  lib.rs  main.rs
configurator/tests/: aiPullManualSend.test.mjs  connectionAction.test.mjs  overviewValueTone.test.mjs  sidebarNavigation.test.mjs  stickConfigPanel.test.mjs
controller/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
controller/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  input_handler.c  (+4 more)
receiver/: CMakeLists.txt  sdkconfig.defaults
receiver/main/: CMakeLists.txt  Kconfig.projbuild  espnow_handler.c  espnow_handler.h  idf_component.yml  main.c  receiver_config.c  receiver_config.h  receiver_config_protocol.h  receiver_config_store.c  receiver_config_store.h  receiver_status.c  receiver_status.h  remote_log.c  remote_log.h  stick_config_sync.c  stick_config_sync.h  usb_config_hid.c  usb_config_hid.h  usb_gamepad.c  usb_gamepad.h  usb_xinput.c  usb_xinput.h
tools/: test_windows_monitor_rumble.py  windows_monitor_rumble.py  windows_send_rumble.py
(+27 files in other folders)
