[package]
name = "receiver-configurator"
version = "0.1.0"
description = "Windows Tauri configurator for receiver HID channel"
authors = ["OpenAI Dev Lab"]
edition = "2021"

[package.metadata]

[lib]
name = "receiver_configurator_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hidapi = { version = "2.6.3", default-features = false, features = ["windows-native"] }
opencv = { version = "0.98.2", default-features = false, features = [
    "clang-runtime",
    "imgcodecs",
    "imgproc",
] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Xps",
    "Win32_UI_WindowsAndMessaging",
] }
